lots of untested progress

--- a/inputs/input.yml
+++ b/inputs/input.yml
@@ -1,5 +1,7 @@
 n_events: 10000
-param_card: param_card_mChi10_mPhi100.dat
+param_card: param_card_mChi100_mPhi4000.dat
 proc_card: proc_card_mg5.dat
 run_card: run_card.dat
 ufotar: DMSimpt_NLO_v1_2_UFO.ufo.tar
+ma5_run_card: ma5_card.dat
+ma5_recast_card: ma5_recast_card.dat
