--- a/workflows/fullma5.yml
+++ b/workflows/fullma5.yml
@@ -44,7 +44,7 @@ stages:
             hepmc: outputhepmc
           publisher_type: frompar-pub
   - dependencies:
-    - pythia
+      - pythia
     name: madanalysis5
     scheduler:
       parameters:
@@ -57,7 +57,7 @@ stages:
         hepmc:
           output: hepmc
           step: pythia
-        output_folder: "{workdir}/ANALYSIS"
+        output_folder: '{workdir}/ANALYSIS'
       scheduler_type: singlestep-stage
       step:
         environment:
@@ -65,7 +65,7 @@ stages:
           image: recast/madanalysis5
           imagetag: 'latest'
         process:
-          process_type: string-interpolated-cmd
+          process_type: interpolated-script-cmd
           script: |
             ./bin/ma5 -R -s {ma5_card}
             cp -r ANALYSIS_0 {output_folder}
