--- a/inputs/input.yml
+++ b/inputs/input.yml
@@ -5,3 +5,4 @@ param_card: param_card_mChi10_mPhi100.dat
 proc_card: proc_card_mg5.dat
 run_card: run_card.dat
 ufotar: DMSimpt_NLO_v1_2_UFO.ufo.tar
+hepmc: output.hepmc
