--- a/workflows/simple_ma5.yml
+++ b/workflows/simple_ma5.yml
@@ -23,7 +23,10 @@ stages:
         process:
           process_type: interpolated-script-cmd
           script: |
-            ./bin/ma5 -R -s {ma5_card}
+            cp {ma5_run_card} ./ma5_run_card.dat
+            cp {ma5_recast_card} ./ma5_recast_card.dat
+            sed -i 's#*.hepmc#{hepmc}#g' ./ma5_run_card.dat
+            ./bin/ma5 -R -s ./ma5_run_card.dat
             cp -r ANALYSIS_0 {output_folder}
         publisher:
           publish:
