--- a/workflows/fullma5.yml
+++ b/workflows/fullma5.yml
@@ -70,7 +70,7 @@ stages:
             cp {ma5_run_card} ./ma5_run_card.dat
             cp {ma5_recast_card} ./ma5_recast_card.dat
             sed -i 's#*.hepmc#{hepmc}#g' ./ma5_run_card.dat
-            ./bin/ma5 -R -s ./ma5_run_card.dat
+            ./bin/ma5 -R -d -s ./ma5_run_card.dat
             cp -r ANALYSIS_0 {output_folder}
         publisher:
           publish:
